--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </div>
 
         <div class="project">
-          <h3>Simple profile poster</h3>
-          <a href="https://www.figma.com/proto/ek5eY4jlveOKf7Fro9RMuJ/Untitled?t=8BUEpvGOXbz5bMXx-0&scaling=contain&content-scaling=fixed&page-id=0%3A1&node-id=6-74" target="_blank">
+          <h3>Pencil Art App UI/UX Design</h3>
+          <a href="https://www.figma.com/proto/MRib3SRuYB4wghBJIc0Jma/Untitled?node-id=10-160&t=i307gzeTU1hjqW5k-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=10%3A160" target="_blank">
             <img src="images/interface_design.jpg" alt="Interface Design Screenshot" />
           </a>
-          <p>Character profile poster of Eren Yeager, created in Figma with balanced typography, color harmony, and visual hierarchy. Showcases my skills in layout design and storytelling through graphics.</p>
+          <p>Designed a creative pencil art app in Figma featuring login and Google sign-in. Users can explore, download, like, and share pencil drawings in a clean, modern interface.</p>
           <p><strong>Tools:</strong> Figma</p>
         </div>
 
@@ -143,3 +143,4 @@
   </script>
 </body>
 </html>
+
