--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="project">
           <h3>Pencil Art App UI/UX Design</h3>
-          <a href="https://www.figma.com/proto/MRib3SRuYB4wghBJIc0Jma/Untitled?node-id=10-160&t=i307gzeTU1hjqW5k-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=10%3A160" target="_blank">
+          <a href="https://www.figma.com/proto/MRib3SRuYB4wghBJIc0Jma/Pencil-Art-App?node-id=10-160&p=f&t=3bIoAZzbqgSCOz3y-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=10%3A160" target="_blank">
             <img src="images/interface_design.jpg" alt="Interface Design Screenshot" />
           </a>
           <p>Designed a creative pencil art app in Figma featuring login and Google sign-in. Users can explore, download, like, and share pencil drawings in a clean, modern interface.</p>
@@ -143,4 +143,5 @@
   </script>
 </body>
 </html>
+
 
