--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </a>
           <p>Created a Glaucoma Awareness website using HTML and CSS, featuring informative sections about the disease. Designed with a clean layout for easy reading and better public awareness.
 .</p>
-          <p><strong>Technologies:</strong> HTML, CSS</p>
+          <p><strong>Technologies:</strong> HTML & Python</p>
         </div>
 
         <div class="project">
@@ -143,6 +143,7 @@
   </script>
 </body>
 </html>
+
 
 
 
