--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
       <h2>Projects</h2>
 
       <div class="project-grid">
+
+        <div class="project">
+          <h3>Tax invoice Table</h3>
+          <a href="instruct.html">
+            <img src="11.png" alt="Screening Screenshot" />
+          </a>
+          <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.
+.</p>
+          <p><strong>Technologies:</strong> HTML </p>
+        </div>
+        
         <div class="project">
           <h3>Glaucoma Screening Website</h3>
           <a href="instruct.html">
@@ -143,6 +154,7 @@
   </script>
 </body>
 </html>
+
 
 
 
