--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
       <h2>Projects</h2>
 
       <div class="project-grid">
-
         <div class="project">
           <h3>Tax invoice Table</h3>
           <a href="instruct.html">
-            <img src="11.png" alt="Screening Screenshot" />
+            <img src="11.png" alt="11 Screening Screenshot" />
           </a>
           <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.
 .</p>
