--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
     <section id="projects">
       <h2>Projects</h2>
 
-      <div class="project-grid">
-        <div class="project">
+      <div class="project">
           <h3>Tax invoice Table</h3>
-          <a href="instruct.html">
-            <img src="11.png" alt="11 Screening Screenshot" />
+          <a href="https://karthikeyan7325.github.io/Tax_invoice/" target="_blank">
+            <img src="images/interface_design.jpg" alt="Interface Design Screenshot" />
           </a>
-          <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.
-.</p>
-          <p><strong>Technologies:</strong> HTML </p>
+          <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.</p>
+          <p><strong>Tools:</strong> Figma</p>
         </div>
         
         <div class="project">
@@ -153,6 +151,7 @@
   </script>
 </body>
 </html>
+
 
 
 
