--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="images/interface_design.jpg" alt="Interface Design Screenshot" />
           </a>
           <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.</p>
-          <p><strong>Tools:</strong> Figma</p>
+          <p><strong>Technologies:</strong> HTML</p>
         </div>
         
         <div class="project">
@@ -151,6 +151,7 @@
   </script>
 </body>
 </html>
+
 
 
 
