--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>        
+      <h2>Projects</h2>
+      <div class="project-grid">
+
+          <div class="project">
+          <h3>Tax invoice Table</h3>
+          <a href="https://karthikeyan7325.github.io/Tax_invoice/" target="_blank">
+            <img src="images/tax.png" alt="Tax Invoice Screenshot" />
+          </a>
+          <p>A clean and professional Tax Invoice Generator built using HTML and CSS, designed for easy customization and printing.</p>
+          <p><strong>Technologies:</strong> HTML</p>
+      </div>
+      
         <div class="project">
           <h3>Glaucoma Screening Website</h3>
           <a href="instruct.html">
@@ -37,7 +48,7 @@
           </a>
           <p>Created a Glaucoma Awareness website using HTML and CSS, featuring informative sections about the disease. Designed with a clean layout for easy reading and better public awareness.
 .</p>
-          <p><strong>Technologies:</strong> HTML & Python</p>
+          <p><strong>Technologies:</strong> HTML, CSS</p>
         </div>
 
         <div class="project">
@@ -141,12 +152,5 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
 
 
